@@ -9,6 +9,7 @@ import com.microsoft.graph.users.UsersRequestBuilder;
 import com.microsoft.graph.users.item.UserItemRequestBuilder;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,6 +34,7 @@ import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.Subscription;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.usersubscription.UserSubscription;
+import uk.gov.hmcts.reform.pip.account.management.service.AuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -83,6 +85,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
 
     private static final String ISSUER_HEADER = "x-issuer-id";
     private static final String ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
+    private static final String REQUESTER_HEADER = "x-requester-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
 
     private static final String EMAIL_PREFIX = "TEST_789_";
     private static final String EMAIL = EMAIL_PREFIX + "user123@test.com";
@@ -131,9 +135,20 @@ class TestingSupportApiTest extends IntegrationTestBase {
     @Mock
     private ClientConfiguration clientConfiguration;
 
+    @MockitoBean
+    private AuthorisationService authorisationService;
+
     @BeforeAll
     static void startup() {
         OBJECT_MAPPER.findAndRegisterModules();
+    }
+
+    @BeforeEach
+    void beforeEachSetUp() {
+        when(authorisationService.userCanCreateAzureAccount(any())).thenReturn(true);
+        when(authorisationService.userCanViewAccounts(any())).thenReturn(true);
+        when(authorisationService.userCanViewAuditLogs(any())).thenReturn(true);
+        when(authorisationService.userCanCreateAccount(any(), any())).thenReturn(true);
     }
 
     @Test
@@ -178,7 +193,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
         when(userItemRequestBuilder.get()).thenReturn(new User());
 
         //Check whether account is created in Pi user table
-        MockHttpServletRequestBuilder getPiUserRequest = get(ACCOUNT_URL + createdAccount.getUserId());
+        MockHttpServletRequestBuilder getPiUserRequest = get(ACCOUNT_URL + createdAccount.getUserId())
+            .header(REQUESTER_HEADER, REQUESTER_ID);
 
         MvcResult responseGetUser = mockMvc.perform(getPiUserRequest).andExpect(status().isOk()).andReturn();
 
@@ -198,7 +214,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .isEqualTo("1 account(s) deleted with email starting with " + EMAIL_PREFIX);
 
         //Check whether the user deleted in Pi user table
-        mockMvc.perform(get(ACCOUNT_URL + createdAccount.getUserId()))
+        mockMvc.perform(get(ACCOUNT_URL + createdAccount.getUserId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -274,10 +291,12 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("No account created")
             .hasSize(1);
 
-        String userId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0);
-        mockMvc.perform(get(ACCOUNT_URL + userId))
+        String userId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst();
+        mockMvc.perform(get(ACCOUNT_URL + userId)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
+        when(authorisationService.userCanDeleteAccount(any(), any())).thenReturn(true);
         MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_ACCOUNT_URL + EMAIL_PREFIX))
             .andExpect(status().isOk())
             .andReturn();
@@ -286,7 +305,9 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Media application delete response does not match")
             .isEqualTo("1 account(s) deleted with email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(ACCOUNT_URL + userId))
+        when(authorisationService.userCanViewAccounts(any())).thenReturn(true);
+        mockMvc.perform(get(ACCOUNT_URL + userId)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -294,10 +315,13 @@ class TestingSupportApiTest extends IntegrationTestBase {
     void testTestingSupportDeleteApplicationsWithEmailPrefix() throws Exception {
         MediaApplication application = createApplication();
 
-        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId()))
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(true);
+        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
-        MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_APPLICATION_URL + EMAIL_PREFIX))
+        MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_APPLICATION_URL + EMAIL_PREFIX)
+            .header(ISSUER_HEADER, ISSUER_ID))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -305,7 +329,9 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Media application delete response does not match")
             .isEqualTo("1 media application(s) deleted with email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId()))
+        when(authorisationService.userCanViewMediaApplications(any())).thenReturn(true);
+        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -343,7 +369,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
     void testTestingSupportDeleteAuditLogsWithEmailPrefix() throws Exception {
         AuditLog auditLog = createAuditLog();
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
         MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_AUDIT_URL + EMAIL_PREFIX))
@@ -354,7 +381,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Audit Log delete response does not match")
             .isEqualTo("2 audit log(s) deleted with user email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -363,10 +391,12 @@ class TestingSupportApiTest extends IntegrationTestBase {
         AuditLog auditLog = createAuditLog();
         LocalDate expiredDate = auditLog.getTimestamp().minusDays(200).toLocalDate();
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
-        MvcResult updateAudit = mockMvc.perform(put(TESTING_SUPPORT_AUDIT_URL + auditLog.getId()))
+        MvcResult updateAudit = mockMvc.perform(put(TESTING_SUPPORT_AUDIT_URL + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk())
             .andReturn();
 
